@@ -1256,7 +1256,15 @@ private:
     void DrawDebugData(rct_drawpixelinfo* dpi)
     {
         ObjectListItem* listItem = &_listItems[selected_list_item];
-        auto screenPos = windowPos + ScreenCoordsXY{ width - 5, height - (LIST_ROW_HEIGHT * 5) };
+        auto screenPos = windowPos + ScreenCoordsXY{ width - 5, height - (LIST_ROW_HEIGHT * 6) };
+
+        // Draw fallback image warning
+        if (_loadedObject && _loadedObject->UsesFallbackImages())
+        {
+            DrawTextBasic(dpi, screenPos, STR_OBJECT_USES_FALLBACK_IMAGES, {}, { COLOUR_WHITE, TextAlignment::RIGHT });
+        }
+        screenPos.y += LIST_ROW_HEIGHT;
+
         // Draw ride type.
         if (GetSelectedObjectType() == ObjectType::Ride)
         {
@@ -1558,6 +1566,7 @@ void EditorLoadSelectedObjects()
     auto& objManager = OpenRCT2::GetContext()->GetObjectManager();
     int32_t numItems = static_cast<int32_t>(object_repository_get_items_count());
     const ObjectRepositoryItem* items = object_repository_get_items();
+    bool showFallbackWarning = false;
     for (int32_t i = 0; i < numItems; i++)
     {
         if (_objectSelectionFlags[i] & ObjectSelectionFlags::Selected)
@@ -1588,6 +1597,10 @@ void EditorLoadSelectedObjects()
                     {
                         research_insert_scenery_group_entry(entryIndex, true);
                     }
+                    if (loadedObject->UsesFallbackImages())
+                    {
+                        showFallbackWarning = true;
+                    }
                 }
             }
         }
@@ -1597,4 +1610,6 @@ void EditorLoadSelectedObjects()
         // Reloads the default cyan water palette if no palette was selected.
         load_palette();
     }
+    if (showFallbackWarning)
+        context_show_error(STR_OBJECT_SELECTION_FALLBACK_IMAGES_WARNING, STR_EMPTY, Formatter::Common());
 }
