@@ -3901,6 +3901,10 @@ enum : uint16_t
 
     STR_INVALID_HEIGHT = 6514,
 
+    STR_OBJECT_USES_FALLBACK_IMAGES = 6515,
+    STR_OBJECT_SELECTION_FALLBACK_IMAGES_WARNING = 6516,
+    STR_PARK_USES_FALLBACK_IMAGES_WARNING = 6517,
+
     // Have to include resource strings (from scenarios and objects) for the time being now that language is partially working
     /* MAX_STR_COUNT = 32768 */ // MAX_STR_COUNT - upper limit for number of strings, not the current count strings
 };
